--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "parcel index.html",
     "build": "parcel build index.html --dist-dir ./dist"
   },
-  "author": "nevo",
+  "author": "iShi",
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.12.0",
@@ -21,4 +21,5 @@
     "regenerator-runtime": "^0.14.1",
     "sass": "^1.80.5"
   }
+
 }
